   different memory management for those values. See the manual for the
   details if you have an extension using those values.  As a result,
   the minor version was incremented.

6. The duplication of m4 and build-aux directories between the main
   directory and the extension directory has been removed. This
   simplifies the distribution.

Changes from 5.0.1 to 5.1.0
---------------------------

1. The major version of the API is bumped to 3, something that should
   have happened at the 5.0.0 release but didn't.

2. A number of memory leak issues have been fixed.

3. Infrastructure upgrades: Bison 3.5.4, Texinfo 6.7, Gettext 0.20.1,
   Automake 1.16.2.

4. The indexing in the manual has been thoroughly revised, in particular
   making use of the facilities in Texinfo 6.7.  That version (or newer)
   must be used to format the manual.

5. MSYS2 is now supported out-of-the-box by configure.

6. Several bugs have been fixed.  See the ChangeLog for details.

Changes from 5.0.0 to 5.0.1
---------------------------

1. A number of ChangeLog.1 files that were left out of the distribution
   have been restored.

2. Multiple syntax errors should no longer be able to cause a core dump.

3. Sandbox mode now disallows assigning new filename values in ARGV that
   were not there when gawk was invoked.

4. There are many small documentation improvements in the manual.

5. The new argument "no-ext" to --lint disables ``XXX is a gawk extension''
   lint warnings.

6. Infrastructure upgrades: Bison 3.4.

7. A number of bugs, some of them quite significant, have been fixed.
   See the ChangeLog for details.

Changes from 4.2.1 to 5.0.0
---------------------------

1. Support for the POSIX standard %a and %A printf formats has been added.

2. The test infrastructure has been greatly improved, simplifying the
   contents of test/Makefile.am and making it possible to generate
   pc/Makefile.tst from test/Makefile.in.
