@@ -1,3 +1,7 @@
+2020-08-04         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* Makefile.tst: Rebuilt.
+
 2020-07-25  Eli Zaretskii  <eliz@gnu.org>
 
 	* Makefile (mingw32, mingw32-readline, mingw32-mpfr)
