@@ -30,6 +30,9 @@ Changes from 5.1.0 to 5.1.1
    directory and the extension directory has been removed. This
    simplifies the distribution.
 
+7. The test suite has been improved, making it easier to run the entire
+   suite with -M. Use `GAWK_TEST_ARGS=-M make check' to do so.
+
 Changes from 5.0.1 to 5.1.0
 ---------------------------
 
